# certifier-framework-for-confidential-computing

certifier_service/: go.sum
sample_apps/simple_app_under_keystone/: CMakeLists.txt  bare_app.cc  instructions.md  keystone_example_app.cc  keystone_example_app.mak  operation.txt  policy_key.cc
src/keystone/: CMakeLists.txt  keystone_api.cc  keystone_api.h  real_test.mak
src/keystone/host/: host.cpp
src/keystone/keystone_tests/: keystone_test.cc
